--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     <main class="body-section">
         <div class="body-container">
             <ul class="nav">
-                <li><a href="./home.html">Fixtures</a></li>
+                <li><a href="./index.html">Fixtures</a></li>
                 <li><a href="#">Results</a></li>
                 <li><a href="./blog.html" class="active">Blogs</a></li>
             </ul>
