--- a/index.html
+++ b/index.html
@@ -1,115 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="https://kit.fontawesome.com/e027f13b6d.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/e027f13b6d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Goal</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header-section">
-        <div class="header-content">
-            <div class="header-text">
-                <h1>The Greatest show on the earth</h1>
-                <p>The official home for the world's football lover, the most prestigious event is going to be held in this year.</p>
-                <button>Book Ticket <i class="fa-solid fa-ticket"></i></button>
-            </div>
-            <div class="header-image">
-                <img src="./media/player.png" alt="player">
-            </div>
+      <div class="header-content">
+        <div class="header-text">
+          <h1>The Greatest show on the earth</h1>
+          <p>
+            The official home for the world's football lover, the most
+            prestigious event is going to be held in this year.
+          </p>
+          <button>Book Ticket <i class="fa-solid fa-ticket"></i></button>
         </div>
+        <div class="header-image">
+          <img src="./media/player.png" alt="player" />
+        </div>
+      </div>
     </header>
     <main class="body-section">
-        <div class="body-container">
-            <ul class="nav">
-                <li><a href="./home.html" class="active">Fixtures</a></li>
-                <li><a href="#">Results</a></li>
-                <li><a href="./blog.html">Blogs</a></li>
-            </ul>
-            <div class="card-container">
-                <div class="flag-card">
-                    <div class="flags">
-                        <img src="./media/germany Flag.png" alt="flag">
-                        <h3>VS</h3>
-                        <img src="./media/Flag.png" alt="flag">
-                    </div>
-                    <div class="fixtures-text">
-                        <h4>Germany VS France</h4>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                </div>
-                <div class="flag-card">
-                    <div class="flags">
-                        <img src="./media/germany Flag.png" alt="flag">
-                        <h3>VS</h3>
-                        <img src="./media/Flag.png" alt="flag">
-                    </div>
-                    <div class="fixtures-text">
-                        <h4>Germany VS France</h4>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                </div>
-                <div class="flag-card">
-                    <div class="flags">
-                        <img src="./media/germany Flag.png" alt="flag">
-                        <h3>VS</h3>
-                        <img src="./media/Flag.png" alt="flag">
-                    </div>
-                    <div class="fixtures-text">
-                        <h4>Germany VS France</h4>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                </div>
-                <div class="flag-card">
-                    <div class="flags">
-                        <img src="./media/germany Flag.png" alt="flag">
-                        <h3>VS</h3>
-                        <img src="./media/Flag.png" alt="flag">
-                    </div>
-                    <div class="fixtures-text">
-                        <h4>Germany VS France</h4>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                </div>
-                <div class="flag-card">
-                    <div class="flags">
-                        <img src="./media/germany Flag.png" alt="flag">
-                        <h3>VS</h3>
-                        <img src="./media/Flag.png" alt="flag">
-                    </div>
-                    <div class="fixtures-text">
-                        <h4>Germany VS France</h4>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                </div>
-                <div class="flag-card">
-                    <div class="flags">
-                        <img src="./media/germany Flag.png" alt="flag">
-                        <h3>VS</h3>
-                        <img src="./media/Flag.png" alt="flag">
-                    </div>
-                    <div class="fixtures-text">
-                        <h4>Germany VS France</h4>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                </div>
+      <div class="body-container">
+        <ul class="nav">
+          <li><a href="./home.html" class="active">Fixtures</a></li>
+          <li><a href="#">Results</a></li>
+          <li><a href="./blog.html">Blogs</a></li>
+        </ul>
+        <div class="card-container">
+          <div class="flag-card">
+            <div class="flags">
+              <img src="./media/germany Flag.png" alt="flag" />
+              <h3>VS</h3>
+              <img src="./media/Flag.png" alt="flag" />
             </div>
+            <div class="fixtures-text">
+              <h4>Germany VS France</h4>
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
+          </div>
+          <div class="flag-card">
+            <div class="flags">
+              <img src="./media/germany Flag.png" alt="flag" />
+              <h3>VS</h3>
+              <img src="./media/Flag.png" alt="flag" />
+            </div>
+            <div class="fixtures-text">
+              <h4>Germany VS France</h4>
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
+          </div>
+          <div class="flag-card">
+            <div class="flags">
+              <img src="./media/germany Flag.png" alt="flag" />
+              <h3>VS</h3>
+              <img src="./media/Flag.png" alt="flag" />
+            </div>
+            <div class="fixtures-text">
+              <h4>Germany VS France</h4>
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
+          </div>
+          <div class="flag-card">
+            <div class="flags">
+              <img src="./media/germany Flag.png" alt="flag" />
+              <h3>VS</h3>
+              <img src="./media/Flag.png" alt="flag" />
+            </div>
+            <div class="fixtures-text">
+              <h4>Germany VS France</h4>
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
+          </div>
+          <div class="flag-card">
+            <div class="flags">
+              <img src="./media/germany Flag.png" alt="flag" />
+              <h3>VS</h3>
+              <img src="./media/Flag.png" alt="flag" />
+            </div>
+            <div class="fixtures-text">
+              <h4>Germany VS France</h4>
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
+          </div>
+          <div class="flag-card">
+            <div class="flags">
+              <img src="./media/germany Flag.png" alt="flag" />
+              <h3>VS</h3>
+              <img src="./media/Flag.png" alt="flag" />
+            </div>
+            <div class="fixtures-text">
+              <h4>Germany VS France</h4>
+              <p>April 01, 2023, 1.00 AM</p>
+            </div>
+          </div>
         </div>
+      </div>
     </main>
     <footer class="footer-section">
-        <div class="footer-logo">
-            <h1>GOAL</h1>
-        </div>
-        <ul class="footer-nav">
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Terms of Service </a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Privacy Settings</a></li>
-            <li><a href="#">Goal App </a></li>
-            <li><a href="#">Goal Live</a></li>
-        </ul>
+      <div class="footer-logo">
+        <h1>GOAL</h1>
+      </div>
+      <ul class="footer-nav">
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Terms of Service </a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Privacy Settings</a></li>
+        <li><a href="#">Goal App </a></li>
+        <li><a href="#">Goal Live</a></li>
+      </ul>
+      <div class="soc-div">
+        <button class="social-btn"><i class="fa-brands fa-facebook"></i></button>
+        <button class="social-btn"><i class="fa-brands fa-instagram"></i></button>
+        <button class="social-btn"><i class="fa-brands fa-twitter"></i></button>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
